[FIX]: web-ui: Remove from-item vertical-align as it will push some elements to top. Fix EnumSelect change position on select issue by hiding antd-generated element on select

--- a/packages/web-ui/src/core/Form/index.less
+++ b/packages/web-ui/src/core/Form/index.less
@@ -58,7 +58,6 @@
                 width: 100%;
                 display: inline-flex;
                 align-content: flex-start;
-                vertical-align: top;
                 flex-wrap: wrap;
             }
 
