--- a/packages/web-ui/src/css/global.less
+++ b/packages/web-ui/src/css/global.less
@@ -75,6 +75,13 @@ button {
     }
 }
 
+.ant-select {
+    // override ant-select element
+    > span:first-child {
+        display: none !important;
+    }
+}
+
 ::placeholder {
     color: #ccc;
 }
